o http://jira.codehaus.org/secure/ViewIssue.jspa?key=CLASSWORLDS-16